[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/theme/lerimama_theme.tres" type="Theme" id=1]
[ext_resource path="res://game/hud/HudColorIndicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/hud/Hud.gd" type="Script" id=3]
[ext_resource path="res://assets/theme/gamer_menu_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://game/hud/HudGameTime.gd" type="Script" id=5]
[ext_resource path="res://assets/spectrum_bar.png" type="Texture" id=6]

[node name="HudControl" type="Control"]
anchor_right = 0.997
anchor_bottom = 0.994
margin_right = 3.84009
margin_bottom = 4.32001
rect_min_size = Vector2( 1280, 720 )
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Bottom" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -646.0
margin_top = -48.0
margin_right = 646.0
margin_bottom = 32.0
color = Color( 0.054902, 0.054902, 0.054902, 1 )

[node name="Top" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -638.0
margin_top = -13.0
margin_right = 654.0
margin_bottom = 67.0
color = Color( 0.113725, 0.129412, 0.176471, 1 )

[node name="GameTime" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 96.0
theme = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Secs" type="Label" parent="GameTime"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -52.0
margin_right = -8.0
custom_fonts/font = ExtResource( 4 )
text = "00"
align = 2
valign = 2

[node name="Mins" type="Label" parent="GameTime"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -52.0
margin_right = 60.0
custom_fonts/font = ExtResource( 4 )
text = "00"
valign = 2

[node name="Dots" type="Label" parent="GameTime"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -52.0
margin_right = 11.0
custom_fonts/font = ExtResource( 4 )
text = ":"
align = 1
valign = 2

[node name="Level" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.0
margin_right = 24.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 4 )
text = "00"
align = 1
valign = 2

[node name="Life" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 32.0
margin_top = 10.0
margin_right = 178.0
margin_bottom = 36.0
text = "P1 LIFE: 00"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Points" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 32.0
margin_top = 42.0
margin_right = 178.0
margin_bottom = 68.0
text = "P1 POINTS: 00"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="CellsTravelled" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 32.0
margin_top = 70.0
margin_right = 264.0
margin_bottom = 96.0
text = "CELLS TRAVELED: 0000"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="SkilChangeCount" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 32.0
margin_top = 102.0
margin_right = 288.0
margin_bottom = 128.0
text = "SKILL CHANGE COUNT: 00"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="PickedColor" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -34.0
margin_right = 356.0
margin_bottom = -14.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="PickedColor"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -26.0
margin_right = 126.0
text = "LAST COLOR:"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="ColorBox" type="Control" parent="PickedColor"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -16.0
margin_right = 12.0
margin_bottom = -4.0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="PickedColor/ColorBox"]
margin_right = 12.0
margin_bottom = 12.0

[node name="Value" type="Label" parent="PickedColor"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -26.0
margin_right = 152.0
text = "255 255 255"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="ColorSum" type="Control" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -48.0
margin_right = 332.0
margin_bottom = -28.0

[node name="Label" type="Label" parent="ColorSum"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -26.0
margin_right = 150.0
text = "PLAYER COLOR:"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Value" type="Label" parent="ColorSum"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = -26.0
margin_right = 288.0
text = "... "
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="PixelsStray" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -287.0
margin_top = -40.0
margin_right = -31.0
margin_bottom = -14.0
text = "PIXELS ASTRAY: 00"
align = 2
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="ColorSpectrumLite" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -30.0
margin_right = 22.0
margin_bottom = -18.0
grow_horizontal = 2
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="IndicatorHolder" type="HBoxContainer" parent="ColorSpectrumLite"]
margin_right = 44.0
margin_bottom = 12.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 12 )
alignment = 1

[node name="SpectrumColorIndicator" type="ColorRect" parent="ColorSpectrumLite/IndicatorHolder" instance=ExtResource( 2 )]
visible = false
margin_left = 16.0
margin_right = 28.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="SpectrumColorIndicator2" type="ColorRect" parent="ColorSpectrumLite/IndicatorHolder" instance=ExtResource( 2 )]
visible = false
margin_left = 24.0
margin_right = 36.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="SpectrumColorIndicator3" type="ColorRect" parent="ColorSpectrumLite/IndicatorHolder" instance=ExtResource( 2 )]
visible = false
margin_left = 32.0
margin_right = 44.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Spectrum" type="TextureRect" parent="ColorSpectrumLite"]
visible = false
margin_top = 24.0
margin_right = 512.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 1

[node name="ColorSpectrum" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -216.0
margin_top = -76.0
margin_right = 296.0
margin_bottom = -32.0
custom_constants/separation = 8

[node name="IndicatorHolder" type="Control" parent="ColorSpectrum"]
margin_right = 512.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )

[node name="SpectrumColorIndicator" type="ColorRect" parent="ColorSpectrum/IndicatorHolder" instance=ExtResource( 2 )]
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Spectrum" type="TextureRect" parent="ColorSpectrum"]
margin_top = 24.0
margin_right = 512.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 1

[node name="PixelsHome" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -287.0
margin_top = -54.0
margin_right = -31.0
margin_bottom = -28.0
text = "BLACK PIXELS: 00"
align = 2
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="PickedColor ver" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -76.0
margin_right = 356.0
margin_bottom = -56.0

[node name="Label" type="Label" parent="PickedColor ver"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -26.0
margin_right = 146.0
text = "LAST PICKED"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="ColorBox" type="Control" parent="PickedColor ver"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 9.0
margin_right = 16.0
margin_bottom = 25.0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="PickedColor ver/ColorBox"]
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0, 0, 0, 1 )

[node name="Value" type="Label" parent="PickedColor ver"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_right = 128.0
margin_bottom = 28.0
text = "255 255 255"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[connection signal="deathmode_on" from="GameTime" to="." method="_on_GameTime_deathmode_on"]
[connection signal="gametime_is_up" from="GameTime" to="." method="_on_GameTime_gametime_is_up"]
